# MVN

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
MLR/: eventos.py  ligador.py  montador.py  motor_de_eventos.py  relocador.py
MVN/: MVN.py  ULA.py  c3po.py  device.py  memory.py  mvnMonitor.py  mvnutils.py
src/mvn_simulator/: __about__.py  address.py  alu.py  binary.py  c3po.py  console.py  device.py  instruction.py  memory.py  memory_position.py  monitor.py  mvn.py  register.py  switchcase.py  utils.py
tests/: __init__.py  test_alu.py  test_binary.py  test_device.py  test_memory.py  test_memory_position.py  test_register.py
